@@ -21,7 +21,6 @@ import sharedrmi.domain.valueobjects.AlbumId;
 
 import javax.naming.NoPermissionException;
 import java.math.BigDecimal;
-import java.rmi.RemoteException;
 import java.time.LocalDate;
 import java.util.*;
 
@@ -40,26 +39,81 @@ public class ProductServiceTest {
     private static ProductRepository productRepository;
 
     @BeforeEach
-    void initMockAndService() throws RemoteException {
+    void initMockAndService() {
         productService = new ProductServiceImpl(productRepository);
     }
 
     @Test
-    void given_songTitle_when_findAlbumsBySongTitle_then_returnAlbumsWithThisSongIn() throws RemoteException {
+    void given_songTitle_when_findAlbumsBySongTitle_then_returnAlbumsWithThisSongIn() {
         // given
         String songTitle = "Thriller";
 
-        Set<Song> songs = new HashSet<>();
-        songs.add(new Song("Thriller", new BigDecimal(2), -1, MediumType.DIGITAL, LocalDate.of(1982, 11, 30), "pop, disco, pop-soul", Collections.emptyList()));
+        Set<Album> albums = Set.of(new Album(
+                "Thriller",
+                "",
+                new BigDecimal(12),
+                4,
+                MediumType.CD,
+                LocalDate.of(1983, 6, 6),
+                new AlbumId(),
+                "Epic",
+                Set.of(new Song(
+                        songTitle,
+                        new BigDecimal(2),
+                        -1,
+                        MediumType.DIGITAL,
+                        LocalDate.of(1982, 11, 30),
+                        "pop, disco, pop-soul",
+                        List.of(new Artist("Michael Jackson")),
+                        Set.of(new Album(
+                                "Thriller",
+                                "",
+                                new BigDecimal(12),
+                                4,
+                                MediumType.CD,
+                                LocalDate.of(1983, 6, 6),
+                                new AlbumId(),
+                                "Epic",
+                                Collections.emptySet()
+                        ))
+                ))
+        ));
 
-        Set<SongDTO> songDTOs = new HashSet<>();
-        songDTOs.add(new SongDTO("Thriller", new BigDecimal(2), -1, MediumType.DIGITAL, LocalDate.of(1982, 11, 30).toString(), "pop, disco, pop-soul", Collections.emptyList(), Collections.emptySet(), 2));
-
-
-        Set<Album> albums = new HashSet<>();
-        albums.add(new Album("Thriller", "", new BigDecimal(12), 4, MediumType.CD, LocalDate.of(1983, 6, 6), new AlbumId(), "Epic", songs));
-
-        givenAlbumDTOs.add(new AlbumDTO("Thriller", "", new BigDecimal(12), 4, MediumType.CD, LocalDate.of(1983, 6, 6).toString(), new AlbumId(), "Epic", songDTOs, 0, 1));
+        givenAlbumDTOs.add(new AlbumDTO(
+                "Thriller",
+                "",
+                new BigDecimal(12),
+                4,
+                MediumType.CD,
+                LocalDate.of(1983, 6, 6).toString(),
+                new AlbumId(),
+                "Epic",
+                Set.of(new SongDTO(
+                        songTitle,
+                        new BigDecimal(2),
+                        -1,
+                        MediumType.DIGITAL,
+                        LocalDate.of(1982, 11, 30).toString(),
+                        "pop, disco, pop-soul",
+                        List.of(new ArtistDTO("Michael Jackson")),
+                        Set.of(new AlbumDTO(
+                                "Thriller",
+                                "",
+                                new BigDecimal(12),
+                                4,
+                                MediumType.CD,
+                                LocalDate.of(1983, 6, 6).toString(),
+                                new AlbumId(),
+                                "Epic",
+                                Collections.emptySet(),
+                                0,
+                                1
+                        )),
+                        2
+                )),
+                0,
+                1
+        ));
 
         Mockito.when(productRepository.findAlbumsBySongTitle(songTitle)).thenReturn(albums);
 
@@ -79,7 +133,7 @@ public class ProductServiceTest {
     }
 
     @Test
-    void given_notExistingSongTitle_when_findAlbumsBySongTitle_then_returnEmptySet() throws RemoteException {
+    void given_notExistingSongTitle_when_findAlbumsBySongTitle_then_returnEmptySet() {
         // given
         String songTitle = "notExistingSongTitle";
 
@@ -93,21 +147,76 @@ public class ProductServiceTest {
     }
 
     @Test
-    void given_existingSongWithRandomCase_when_findAlbumsBySongTitle_then_expectSong() throws RemoteException {
+    void given_existingSongWithRandomCase_when_findAlbumsBySongTitle_then_expectSong() {
         // given
         String songTitle = "tHrIlLeR";
 
-        Set<Song> songs = new HashSet<>();
-        songs.add(new Song("Thriller", new BigDecimal(2), -1, MediumType.DIGITAL, LocalDate.of(1982, 11, 30), "pop, disco, pop-soul", Collections.emptyList()));
+        Set<Album> albums = Set.of(new Album(
+                "Thriller",
+                "",
+                new BigDecimal(12),
+                4,
+                MediumType.CD,
+                LocalDate.of(1983, 6, 6),
+                new AlbumId(),
+                "Epic",
+                Set.of(new Song(
+                        songTitle,
+                        new BigDecimal(2),
+                        -1,
+                        MediumType.DIGITAL,
+                        LocalDate.of(1982, 11, 30),
+                        "pop, disco, pop-soul",
+                        List.of(new Artist("Michael Jackson")),
+                        Set.of(new Album(
+                                "Thriller",
+                                "",
+                                new BigDecimal(12),
+                                4,
+                                MediumType.CD,
+                                LocalDate.of(1983, 6, 6),
+                                new AlbumId(),
+                                "Epic",
+                                Collections.emptySet()
+                        ))
+                ))
+        ));
 
-        Set<SongDTO> songDTOs = new HashSet<>();
-        songDTOs.add(new SongDTO("Thriller", new BigDecimal(2), -1, MediumType.DIGITAL, LocalDate.of(1982, 11, 30).toString(), "pop, disco, pop-soul", Collections.emptyList(), Collections.emptySet(), 5));
-
-
-        Set<Album> albums = new HashSet<>();
-        albums.add(new Album("Thriller", "", new BigDecimal(12), 4, MediumType.CD, LocalDate.of(1983, 6, 6), new AlbumId(), "Epic", songs));
-
-        givenAlbumDTOs.add(new AlbumDTO("Thriller", "", new BigDecimal(12), 4, MediumType.CD, LocalDate.of(1983, 6, 6).toString(), new AlbumId(), "Epic", songDTOs, 0, 1));
+        givenAlbumDTOs.add(new AlbumDTO(
+                "Thriller",
+                "",
+                new BigDecimal(12),
+                4,
+                MediumType.CD,
+                LocalDate.of(1983, 6, 6).toString(),
+                new AlbumId(),
+                "Epic",
+                Set.of(new SongDTO(
+                        songTitle,
+                        new BigDecimal(2),
+                        -1,
+                        MediumType.DIGITAL,
+                        LocalDate.of(1982, 11, 30).toString(),
+                        "pop, disco, pop-soul",
+                        List.of(new ArtistDTO("Michael Jackson")),
+                        Set.of(new AlbumDTO(
+                                "Thriller",
+                                "",
+                                new BigDecimal(12),
+                                4,
+                                MediumType.CD,
+                                LocalDate.of(1983, 6, 6).toString(),
+                                new AlbumId(),
+                                "Epic",
+                                Collections.emptySet(),
+                                0,
+                                1
+                        )),
+                        2
+                )),
+                0,
+                1
+        ));
 
         Mockito.when(productRepository.findAlbumsBySongTitle(songTitle)).thenReturn(albums);
 
@@ -127,14 +236,120 @@ public class ProductServiceTest {
     }
 
     @Test
-    void given_existingSong_when_findSongsByTitle_then_expectEmptyList() throws RemoteException {
+    void given_songTitle_when_findAlbumsBySongTitleDigital_then_returnDigitalAlbumsWithThisSongIn() {
+        // given
+        String songTitle = "Thriller";
+
+        Set<Album> albums = Set.of(new Album(
+                "Thriller",
+                "",
+                new BigDecimal(12),
+                4,
+                MediumType.DIGITAL,
+                LocalDate.of(1983, 6, 6),
+                new AlbumId(),
+                "Epic",
+                Set.of(new Song(
+                        songTitle,
+                        new BigDecimal(2),
+                        -1,
+                        MediumType.DIGITAL,
+                        LocalDate.of(1982, 11, 30),
+                        "pop, disco, pop-soul",
+                        List.of(new Artist("Michael Jackson")),
+                        Set.of(new Album(
+                                "Thriller",
+                                "",
+                                new BigDecimal(12),
+                                4,
+                                MediumType.DIGITAL,
+                                LocalDate.of(1983, 6, 6),
+                                new AlbumId(),
+                                "Epic",
+                                Collections.emptySet()
+                        ))
+                ))
+        ));
+
+        givenAlbumDTOs.add(new AlbumDTO(
+                "Thriller",
+                "",
+                new BigDecimal(12),
+                4,
+                MediumType.DIGITAL,
+                LocalDate.of(1983, 6, 6).toString(),
+                new AlbumId(),
+                "Epic",
+                Set.of(new SongDTO(
+                        songTitle,
+                        new BigDecimal(2),
+                        -1,
+                        MediumType.DIGITAL,
+                        LocalDate.of(1982, 11, 30).toString(),
+                        "pop, disco, pop-soul",
+                        List.of(new ArtistDTO("Michael Jackson")),
+                        Set.of(new AlbumDTO(
+                                "Thriller",
+                                "",
+                                new BigDecimal(12),
+                                4,
+                                MediumType.DIGITAL,
+                                LocalDate.of(1983, 6, 6).toString(),
+                                new AlbumId(),
+                                "Epic",
+                                Collections.emptySet(),
+                                0,
+                                1
+                        )),
+                        2
+                )),
+                0,
+                1
+        ));
+
+        Mockito.when(productRepository.findAlbumsBySongTitle(songTitle)).thenReturn(albums);
+
+        // when
+        List<AlbumDTO> albumDTOs = productService.findAlbumsBySongTitleDigital(songTitle);
+
+        // then
+        assertAll(
+                () -> assertEquals(givenAlbumDTOs.get(0).getTitle(), albumDTOs.get(0).getTitle()),
+                () -> assertEquals(givenAlbumDTOs.get(0).getPrice(), albumDTOs.get(0).getPrice()),
+                () -> assertEquals(givenAlbumDTOs.get(0).getStock(), albumDTOs.get(0).getStock()),
+                () -> assertEquals(givenAlbumDTOs.get(0).getMediumType(), albumDTOs.get(0).getMediumType()),
+                () -> assertEquals(givenAlbumDTOs.get(0).getReleaseDate(), albumDTOs.get(0).getReleaseDate()),
+                () -> assertEquals(givenAlbumDTOs.get(0).getLabel(), albumDTOs.get(0).getLabel()),
+                () -> assertEquals(givenAlbumDTOs.get(0).getSongs().size(), albumDTOs.get(0).getSongs().size())
+        );
+    }
+
+    @Test
+    void given_existingSong_when_findSongsByTitle_then_expectEmptyList() {
         // given
         String songTitle = "Beautiful";
 
-        List<Song> songs = new LinkedList<>();
-        songs.add(new Song(songTitle, new BigDecimal(2), -1, MediumType.DIGITAL, LocalDate.of(2012, 9, 28), "dancehall, reggae", Collections.emptyList()));
+        List<Song> songs = List.of(new Song(
+                songTitle,
+                new BigDecimal(2),
+                -1,
+                MediumType.DIGITAL,
+                LocalDate.of(2012, 9, 28),
+                "dancehall, reggae",
+                Collections.emptyList()
+        ));
 
-        givenSongDTOs.add(new SongDTO(songTitle, new BigDecimal(2), -1, MediumType.DIGITAL, LocalDate.of(2012, 9, 28).toString(), "dancehall, reggae", Collections.emptyList(), Collections.emptySet(), 0));
+        givenSongDTOs.add(new SongDTO(
+                songTitle,
+                new BigDecimal(2),
+                -1,
+                MediumType.DIGITAL,
+                LocalDate.of(2012, 9, 28).toString(),
+                "dancehall, reggae",
+                Collections.emptyList(),
+                Collections.emptySet(),
+                0
+        ));
 
         Mockito.when(productRepository.findSongsByTitle(songTitle)).thenReturn(songs);
 
@@ -153,7 +368,7 @@ public class ProductServiceTest {
     }
 
     @Test
-    void given_notExistingSong_when_findSongsByTitle_then_expectEmptyList() throws RemoteException {
+    void given_notExistingSong_when_findSongsByTitle_then_expectEmptyList() {
         // given
         String songTitle = "notExistingSongTitle";
 
@@ -167,14 +382,31 @@ public class ProductServiceTest {
     }
 
     @Test
-    void given_existingSongWithRandomCase_when_findSongsByTitle_then_expectSong() throws RemoteException {
+    void given_existingSongWithRandomCase_when_findSongsByTitle_then_expectSong() {
         // given
         String songTitle = "beaUtiFul";
 
-        List<Song> songs = new LinkedList<>();
-        songs.add(new Song("Beautiful", new BigDecimal(2), -1, MediumType.DIGITAL, LocalDate.of(2012, 9, 28), "dancehall, reggae", Collections.emptyList()));
+        List<Song> songs = List.of(new Song(
+                songTitle,
+                new BigDecimal(2),
+                -1,
+                MediumType.DIGITAL,
+                LocalDate.of(2012, 9, 28),
+                "dancehall, reggae",
+                Collections.emptyList()
+        ));
 
-        givenSongDTOs.add(new SongDTO("Beautiful", new BigDecimal(2), -1, MediumType.DIGITAL, LocalDate.of(2012, 9, 28).toString(), "dancehall, reggae", Collections.emptyList(), Collections.emptySet(), 0));
+        givenSongDTOs.add(new SongDTO(
+                songTitle,
+                new BigDecimal(2),
+                -1,
+                MediumType.DIGITAL,
+                LocalDate.of(2012, 9, 28).toString(),
+                "dancehall, reggae",
+                Collections.emptyList(),
+                Collections.emptySet(),
+                0
+        ));
 
         Mockito.when(productRepository.findSongsByTitle(songTitle)).thenReturn(songs);
 
@@ -193,12 +425,11 @@ public class ProductServiceTest {
     }
 
     @Test
-    void given_artist_when_findArtistsByName_then_expectArtist() throws RemoteException {
+    void given_artist_when_findArtistsByName_then_expectArtist() {
         // given
         String artistName = "Seeed";
 
-        List<Artist> artists = new LinkedList<>();
-        artists.add(new Artist(artistName));
+        List<Artist> artists = List.of(new Artist(artistName));
 
         givenArtistDTOs.add(new ArtistDTO(artistName));
 
@@ -212,7 +443,7 @@ public class ProductServiceTest {
     }
 
     @Test
-    void given_notExistingArtist_when_findArtistsByName_then_expectEmptyList() throws RemoteException {
+    void given_notExistingArtist_when_findArtistsByName_then_expectEmptyList() {
         // given
         String artistName = "notExistingArtistName";
 
@@ -226,12 +457,11 @@ public class ProductServiceTest {
     }
 
     @Test
-    void given_existingArtistWithRandomCase_when_findArtistsByName_then_expectArtist() throws RemoteException {
+    void given_existingArtistWithRandomCase_when_findArtistsByName_then_expectArtist() {
         // given
         String artistName = "seEed";
 
-        List<Artist> artists = new LinkedList<>();
-        artists.add(new Artist(artistName));
+        List<Artist> artists = List.of(new Artist(artistName));
 
         givenArtistDTOs.add(new ArtistDTO(artistName));
 
@@ -245,8 +475,7 @@ public class ProductServiceTest {
     }
 
     @Test
-    void given_album_when_decreasestockofalbum_then_decreasedstock() throws RemoteException, NoPermissionException, NotEnoughStockException {
-
+    void given_album_when_decreaseStockOfAlbum_then_decreasedStock() throws NoPermissionException, NotEnoughStockException {
         // given
         final String title = "title1";
         final MediumType mediumType = MediumType.CD;
@@ -274,13 +503,65 @@ public class ProductServiceTest {
     }
 
     @Test
-    void given_album_when_findAlbumByTitleAndMedium_then_expectalbum () throws RemoteException, AlbumNotFoundException {
-
+    void given_albumWithLimitedStock_when_decreaseStockOfAlbum_then_decreasedStock() {
         // given
         final String title = "title1";
         final MediumType mediumType = MediumType.CD;
+        final int givenStock = 8;
+        final int decreaseQuantity = 9;
 
         Album album = new Album(title,
+                "",
+                BigDecimal.TEN,
+                givenStock,
+                mediumType,
+                LocalDate.now(),
+                new AlbumId(),
+                "label1",
+                new HashSet<>());
+
+        Mockito.when(productRepository.findAlbumByAlbumTitleAndMedium(title, mediumType)).thenReturn(album);
+
+        // when ... then
+        assertThrows(NotEnoughStockException.class, () -> productService.decreaseStockOfAlbum(title, mediumType, decreaseQuantity));
+    }
+
+    @Test
+    void given_album_when_increaseStockOfAlbum_then_decreasedStock() throws NoPermissionException {
+        // given
+        final String title = "title1";
+        final MediumType mediumType = MediumType.CD;
+        final int givenStock = 8;
+        final int increaseQuantity = 5;
+        final int expectedQuantity = 13;
+
+        Album album = new Album(title,
+                "",
+                BigDecimal.TEN,
+                givenStock,
+                mediumType,
+                LocalDate.now(),
+                new AlbumId(),
+                "label1",
+                new HashSet<>()
+        );
+
+        Mockito.when(productRepository.findAlbumByAlbumTitleAndMedium(title, mediumType)).thenReturn(album);
+
+        // when
+        productService.increaseStockOfAlbum(title, mediumType, increaseQuantity);
+
+        // then
+        assertEquals(expectedQuantity, album.getStock());
+    }
+
+    @Test
+    void given_album_when_findAlbumByTitleAndMedium_then_expectAlbum () throws AlbumNotFoundException {
+        // given
+        final String title = "title1";
+        final MediumType mediumType = MediumType.CD;
+        Album album = new Album(
+                title,
                 "",
                 BigDecimal.TEN,
                 8,
@@ -288,7 +569,16 @@ public class ProductServiceTest {
                 LocalDate.now(),
                 new AlbumId(),
                 "label1",
-                new HashSet<>());
+                Set.of(new Song(
+                        "songTitle1",
+                        BigDecimal.ONE,
+                        1,
+                        MediumType.DIGITAL,
+                        LocalDate.now(),
+                        "genre1",
+                        List.of(new Artist("artist1"))
+                ))
+        );
 
         Mockito.when(productRepository.findAlbumByAlbumTitleAndMedium(title, mediumType)).thenReturn(album);
 
@@ -302,25 +592,68 @@ public class ProductServiceTest {
     }
 
     @Test
-    void given_notexistingalbum_when_findAlbumByTitleAndMedium_then_albumnotfoundexception () {
-
+    void given_notExistingAlbum_when_findAlbumByTitleAndMedium_then_albumNotFoundException() {
         // given
         final String title = "title1";
         final MediumType mediumType = MediumType.CD;
-
-        Album album = new Album(title,
-                "",
-                BigDecimal.TEN,
-                8,
-                mediumType,
-                LocalDate.now(),
-                new AlbumId(),
-                "label1",
-                new HashSet<>());
 
         Mockito.when(productRepository.findAlbumByAlbumTitleAndMedium(title, mediumType)).thenReturn(null);
 
         // when ... then
         assertThrows(AlbumNotFoundException.class, () -> productService.findAlbumByAlbumTitleAndMedium(title, mediumType));
+    }
+
+    @Test
+    void given_albumId_when_findAlbumByAlbumId_then_expectAlbum() throws AlbumNotFoundException {
+        // given
+        AlbumId albumId = new AlbumId();
+        Album album = new Album(
+                "title1",
+                "",
+                BigDecimal.TEN,
+                8,
+                MediumType.CD,
+                LocalDate.now(),
+                albumId,
+                "label1",
+                Set.of(new Song(
+                        "songTitle1",
+                        BigDecimal.ONE,
+                        1,
+                        MediumType.DIGITAL,
+                        LocalDate.now(),
+                        "genre1",
+                        List.of(new Artist("artist1"))
+                ))
+        );
+
+        Mockito.when(productRepository.findAlbumByAlbumId(albumId.toString())).thenReturn(Optional.of(album));
+
+        // when
+        AlbumDTO albumDTO = productService.findAlbumByAlbumId(albumId.toString());
+
+        // then
+        assertAll(
+                () -> assertEquals(albumDTO.getTitle(), album.getTitle()),
+                () -> assertEquals(albumDTO.getImageUrl(), album.getImageUrl()),
+                () -> assertEquals(albumDTO.getPrice(), album.getPrice()),
+                () -> assertEquals(albumDTO.getStock(), album.getStock()),
+                () -> assertEquals(albumDTO.getMediumType(), album.getMediumType()),
+                () -> assertEquals(albumDTO.getReleaseDate(), album.getReleaseDate().toString()),
+                () -> assertEquals(albumDTO.getAlbumId(), album.getAlbumId()),
+                () -> assertEquals(albumDTO.getLabel(), album.getLabel()),
+                () -> assertEquals(albumDTO.getSongs().size(), album.getSongs().size())
+        );
+    }
+
+    @Test
+    void given_notExistingAlbumId_when_findAlbumByAlbumId_then_expectAlbum() {
+        // given
+        AlbumId notExistingAlbumId = new AlbumId();
+
+        Mockito.when(productRepository.findAlbumByAlbumId(notExistingAlbumId.toString())).thenReturn(Optional.empty());
+
+        // when ... then
+        assertThrows(AlbumNotFoundException.class, () -> productService.findAlbumByAlbumId(notExistingAlbumId.toString()));
     }
 }
